@@ -1,4 +1,5 @@
 2011-01-20  Michael Miousse  <michael.miousse@infoglobe.ca>
+	* Fixed bug #12432 Selected page metas are not processed
 	* Fixed bug #12431 putting labels into members, is this necessary (it's at least very uncommon): $this->firstSteps 
 	* Fixed bug #12429 do not use private accessors
 	* Fixed bug #12428 Adapt Variable Names to naming conventions
@@ -6,8 +7,8 @@
 	* Fixed bug #12426: Rename classes according to naming conventions
 	* Fixed bug #12425: Give modfunc1 a better name
 	* Fixed bug #12424: Only use the class name for the hook
-	* Fixed bug #12416 tx_linkvalidator_tasks_Validate: Missing public / protected declarations	
-	* Fixed bug #12226 website that has multiple domainsrecords produces funny links
+	* Fixed bug #12416: tx_linkvalidator_tasks_Validate: Missing public / protected declarations	
+	* Fixed bug #12226: website that has multiple domainsrecords produces funny links
 	* Fixed bug #12414: OOP principle of data encapsulation violated in tx_linkvalidator_tasks_Validate	
 	* Fixed bug #12385: Conflict scheduler:testtask with linkvalidator::task	
 	* Fixed bug #12411: Fix Copyright Notices
